--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.1.3",
+    "styled-components": "^5.3.3",
     "typescript": "^4.4.4",
     "web-vitals": "^1.1.2"
   },
@@ -55,6 +56,7 @@
   },
   "devDependencies": {
     "@types/redux-logger": "^3.0.9",
+    "@types/styled-components": "^5.1.15",
     "gh-pages": "^3.2.3"
   }
 }
