--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "github-repoboard",
-  "homepage": "https://shuimi.github.io/github-repoboard",
+  "homepage": "https://shuimi.github.io",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
